--- a/q3-Admin/package.json
+++ b/q3-Admin/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "google-map-react": "^2.2.5",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
