--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-map-react": "^2.2.5",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
